--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script>
     AOS.init();
   </script>
-    <div style="background: url('https://i.pinimg.com/originals/04/ff/b9/04ffb96016eaba8635718f0f85bbbb99.jpg'); height: 100vh;">
+    <div id="top" style="background: url('https://i.pinimg.com/originals/04/ff/b9/04ffb96016eaba8635718f0f85bbbb99.jpg'); height: 100vh;">
       <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
             <a class="navbar-brand" href="#"><img class="navimage" width="500px" height="200px" src="https://images.squarespace-cdn.com/content/v1/64f75961ff99d118e67bdefa/0dea89ed-f716-4a02-bf17-e8c0d9bfa1ea/horizontal-light_rgb.png?format=1500w" alt=""></a>
@@ -31,25 +31,25 @@
                     About Us
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a style="color: white;" class="dropdown-item" href="#">Action</a></li>
-                    <li><a style="color: white;" class="dropdown-item" href="#">Another action</a></li>
-                    <li><a style="color: white;" class="dropdown-item" href="#">Something else here</a></li>
+                    <li><a class="dropdown-item" href="#">Our Beliefs</a></li>
+                    <li><a class="dropdown-item" href="#">Our Team</a></li>
+                    <li><a class="dropdown-item" href="#">Our Board</a></li>
+                    <li><a class="dropdown-item" href="#">Our School</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a style="color: white;" class="nav-link active" aria-current="page" href="#">Our school</a>
+                  <a style="color: white;" class="nav-link active" aria-current="page" href="#Ourschool">Our school</a>
                 </li>
                 <li class="nav-item">
-                  <a style="color: white;" class="nav-link" href="#">Enroll</a>
+                  <a style="color: white;" class="nav-link" href="#enroll">Enroll</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a style="color: white;" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Resourses
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a style="color: white;" class="dropdown-item" href="#">Action</a></li>
-                    <li><a style="color: white;" class="dropdown-item" href="#">Another action</a></li>
-                    <li><a style="color: white;" class="dropdown-item" href="#">Something else here</a></li>
+                    <li><a class="dropdown-item" href="#">HandBook</a></li>
+                    <li><a class="dropdown-item" href="#">Calender </a></li>
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -57,22 +57,21 @@
                     Careers
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a style="color: white;" class="dropdown-item" href="#">Action</a></li>
-                    <li><a style="color: white;" class="dropdown-item" href="#">Another action</a></li>
-                    <li><a style="color: white;" class="dropdown-item" href="#">Something else here</a></li>
+                    <li><a class="dropdown-item" href="#">Apply Today</a></li>
+                    <li><a class="dropdown-item" href="#">Benifit of Teaching at Believe</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a style="color: white;" class="nav-link" href="#">Contact</a>
+                  <a style="color: white;" class="nav-link" href="#Contact">Contact</a>
                 </li>
                 <li class="nav-item">
-                  <a style="color: white;" class="nav-link" href="#"><i class="fa-brands fa-facebook"></i></a>
+                  <a style="color: white;" class="nav-link" href="https://www.facebook.com/" target="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
                 </li>
                 <li class="nav-item">
-                  <a style="color: white;" class="nav-link" href="#"><i class="fa-brands fa-instagram"></i></a>
+                  <a style="color: white;" class="nav-link" href="https://www.instagram.com/" target="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
                 </li>
                 <li class="nav-item">
-                  <a style="color: white;" class="nav-link" href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                  <a style="color: white;" class="nav-link" href="https://in.linkedin.com/" target="https://in.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
                 </li>
               </ul>
               <!-- <button style="color: black; border-radius: 100px;">Give</button> -->
@@ -100,7 +99,7 @@
           </div>
       </div>
   </section>  
-    <section class="mt-5 pt-5 pb-5" style="background-image: linear-gradient(to right, rgb(108, 108, 108), rgb(16, 16, 103) ); color: white;">
+    <section id="Ourschool" class="mt-5 pt-5 pb-5" style="background-image: linear-gradient(to right, rgb(108, 108, 108), rgb(16, 16, 103) ); color: white;">
       <h1 data-aos="zoom-out-down">ACADEMIC <br> SUCCESS</h1>
       <div class="row mt-5">
         <div data-aos="zoom-out-down" class="col-lg-4">
@@ -168,7 +167,7 @@
         <hr style="border: 3px solid; color: rgb(1, 1, 63);">
       </div>
     </section>
-    <section style="background-image: linear-gradient(to right, rgb(16, 16, 103), rgb(108, 108, 108)); width: 100%; height: auto; padding: 50px 0;">
+    <section id="Contact" style="background-image: linear-gradient(to right, rgb(16, 16, 103), rgb(108, 108, 108)); width: 100%; height: auto; padding: 50px 0;">
       <div class="container">
           <div class="row">
               <div data-aos="zoom-out" class="col-lg-6 col-md-12 text-center text-lg-start">
@@ -206,6 +205,8 @@
       </div>
       
     </section>
+    <a class="up" href="#top"><i class="fa-solid fa-circle-up"></i></a></div>
+  </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
@@ -215,44 +216,3 @@
 
 
 
-
-
-
-
-<!-- <section id="enroll">
-  <div class="row mt-5">
-    <div data-aos="fade-up"
-    data-aos-anchor-placement="top-bottom" data-aos-duration="3000" class="col-lg-6">
-      <u style="color: orange;"><h1 id="enrollhead" style="color: black; font-size: 100px;">Enroll today</h1></u>
-      <button id="enrollhead1" class="ms-5 fs-1 bluehover" style="border-radius: 100px; background-color: orange; ">BEGIN ENROLLMENT</button>
-    </div>
-    <div data-aos="flip-left"
-    data-aos-easing="ease-out-cubic"
-    data-aos-duration="2000" class="col-lg-6">
-      <img width="600px" style="border-image: round; border-radius: 200px;" src="https://images.squarespace-cdn.com/content/v1/64f75961ff99d118e67bdefa/38a9fa28-cc8d-4dda-9ca2-2b74743fcf9d/160617.EFC.BELIEVE.ACADEMY.110-web-small.jpg?format=1500w" alt="">
-    </div>
-  </div>
-</section> -->
-
-
-<!-- <section style="background-image: linear-gradient(to right, rgb(16, 16, 103), rgb(108, 108, 108) ); width: 100%; height: 600px;">
-    <div class="row">  
-      <div data-aos="zoom-out" class="col-6 text-center">
-        <h1 style="color: white; margin-top: 250px;">Staff Recruitment</h1>
-        <h3 style="color: white;">We are seeking Mission-driven, hard-working, determined individuals to join our School.</h3>
-        <button class="fs-4 bluehover" style="border-radius: 100px;">View Careers</button>
-      </div>
-      <div data-aos="flip-left"
-      data-aos-easing="ease-out-cubic"
-      data-aos-duration="2000" class="col-6">
-    <img width="100%" height="300px" style="padding: 30px; margin-top: 200px; clip-path: polygon(25% 0%,
-    75% 0%,
-    100% 25%,
-    100% 75%,
-    75% 100%,
-    25% 100%,
-    0% 75%,
-    0% 25%);" src="https://images.squarespace-cdn.com/content/v1/64f75961ff99d118e67bdefa/8861d08b-9957-43a0-8916-118ba841d1d1/161208.EFC.BELIEVE.MEMPHIS.ACADEMY+.194+%281%29.jpg?format=1500w" alt="">
-      </div>
-    </div>
-    </section> -->
